temp newhome folder

--- a/newhomepage/index.html
+++ b/newhomepage/index.html
@@ -110,7 +110,7 @@
                         <div class="row align-items-center justify-content-center">
                             <div class="col-12 col-sm-10 col-md-8 col-lg-6 text-center">
                                 <h1 class="hero-title">
-                                    The simplest way to get real user insights
+                                    Discover Real User Needs Effortlessly
                                 </h1>
                                 <p class="hero-lead lead px-lg-4">
                                     Watch people talk candidly about your mobile app or website—on-demand or auto-delivered monthly
@@ -209,7 +209,7 @@
                         <div class="space-md"></div>
                         <!--/ End Empty Space -->
                         <p class="section-lead lead">
-                            Skip user recruiting and scheduling headaches. Just enter your mobile app or website URL to start getting insights.
+                            Skip the headaches around user recruiting and scheduling. Simply enter your mobile app, website or prototype URL to start getting insights.
                         </p>
                     </div>
                 </div>
@@ -234,7 +234,7 @@
                         <div class="space-md"></div>
                         <!--/ End Empty Space -->
                         <p class="section-lead lead">
-                            Settle confusions and disputes by simply sharing a test results link. Gain deep insights beyond the blind-spots and biases of surveys, analytics and improper research.
+                            Settle confusions and disputes by simply sharing a test results link. Uncover new user insights beyond the blind-spots and biases of surveys, analytics and improper research.
                         </p>
                     </div>
                 </div>
