--- a/newhomepage/examples.html
+++ b/newhomepage/examples.html
@@ -107,7 +107,7 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h1 class="page-title text-center">
-                                Example UserLook Videos
+                                Looking is Believing 😎
                             </h1>
                     </div>
                     <div class="col-12">
