--- a/newhomepage/pricing.html
+++ b/newhomepage/pricing.html
@@ -107,7 +107,7 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h1 class="page-title text-center">
-                                Eye-opening user insights delivered monthly 🤓
+                                Eye-opening user insights. Simple & Cheap 🤓
                             </h1>
                     </div>
                     <div class="col-12">
