--- a/newhomepage/examples.html
+++ b/newhomepage/examples.html
@@ -232,7 +232,7 @@
                 <div class="row">
                     <div class="col-11 col-lg-7 mx-auto">
                         <h2 class="section-title h2 text-center">
-                                Manage all your test results in one place 
+                                Manage all your tests and test results in one place 
                             </h2>
                     </div>
                     <div class="col-lg-10 mx-auto">
