--- a/newhomepage/index.html
+++ b/newhomepage/index.html
@@ -113,7 +113,7 @@
                                     Discover Real User Needs Effortlessly
                                 </h1>
                                 <p class="hero-lead lead px-lg-4">
-                                    Watch people talk candidly about your mobile app or website—on-demand or auto-delivered monthly
+                                    Watch people use your mobile app/website while sharing their unbiased thoughts & opinions.
                                 </p>
                                 <!-- Empty Space -->
                                 <div class="space-lg"></div>
@@ -178,13 +178,13 @@
                     </div>
                     <div class="col-lg-5 text-center text-lg-left">
                         <h2 class="section-title">
-                                Understand the WHY behind your metrics 🔍
+                                Stop guessing at your metrics 🔍
                             </h2>
                         <!-- Empty Space -->
                         <div class="space-md"></div>
                         <!--/ End Empty Space -->
                         <p class="section-lead lead">
-                            Stop guessing at your numbers and see what people actually do while they think out loud their unbiased feelings & opinions.
+                            Understand and witness the WHY behind your metrics to improve conversions, usability, UX and retention.
                         </p>
                     </div>
                 </div>
@@ -209,7 +209,8 @@
                         <div class="space-md"></div>
                         <!--/ End Empty Space -->
                         <p class="section-lead lead">
-                            Skip the headaches around user recruiting and scheduling. Simply enter your mobile app, website or prototype URL to start getting insights.
+                            Skip the headaches around user recruiting and testing logistics. Simply enter your mobile app, website or prototype URL to get insights on-demand or auto-delivered monthly.
+
                         </p>
                     </div>
                 </div>
@@ -228,13 +229,15 @@
                     </div>
                     <div class="col-lg-5 text-center text-lg-left">
                         <h2 class="section-title h2">
-                            Inspire & align your team w/ real user stories 🙌
+                            Make confident decisions with your team 🙌
                         </h2>
                         <!-- Empty Space -->
                         <div class="space-md"></div>
                         <!--/ End Empty Space -->
                         <p class="section-lead lead">
-                            Settle confusions and disputes by simply sharing a test results link. Uncover new user insights beyond the blind-spots and biases of surveys, analytics and improper research.
+                            Inspire and align your team simply by sharing a test results link. Learn from real user stories that go beyond the blind-spots & biases of surveys, analytics and improper research.
+
+
                         </p>
                     </div>
                 </div>
@@ -277,7 +280,7 @@
                                     <p class="mb-0">
                                         Very happy with the results. We have a monthly user video lunch session with our entire engineering/product team, and these shorter videos are a really great format. Look forward to getting these videos every month!
                                     </p>
-                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon rounded-circle">
+                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon">
                                 </div>
                                 <!-- Empty Space -->
                                 <div class="space-sm"></div>
@@ -304,7 +307,7 @@
                                     <p class="mb-0">
                                         We love the user videos we get from UserLook. The quality is really great and actually seeing how people interact and use our site has been really insightful for us. And the service itself is friendly and easy to use!
                                     </p>
-                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon rounded-circle">
+                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon">
                                 </div>
                                 <!-- Empty Space -->
                                 <div class="space-sm"></div>
@@ -331,7 +334,7 @@
                                     <p class="mb-0">
                                         The videos are FANTASTIC!  It was really interesting to see to see how they moved about the site to find the information they needed. Love your product!
                                     </p>
-                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon rounded-circle">
+                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon">
                                 </div>
                                 <!-- Empty Space -->
                                 <div class="space-sm"></div>
