--- a/newhomepage/pricing.html
+++ b/newhomepage/pricing.html
@@ -350,7 +350,7 @@
                                     <p class="mb-0">
                                         Very happy with the results. We have a monthly user video lunch session with our entire engineering/product team, and these shorter videos are a really great format. Look forward to getting these videos every month!
                                     </p>
-                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon rounded-circle">
+                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon">
                                 </div>
                                 <!-- Empty Space -->
                                 <div class="space-sm"></div>
@@ -377,7 +377,7 @@
                                     <p class="mb-0">
                                         We love the user videos we get from UserLook. The quality is really great and actually seeing how people interact and use our site has been really insightful for us. And the service itself is friendly and easy to use!
                                     </p>
-                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon rounded-circle">
+                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon">
                                 </div>
                                 <!-- Empty Space -->
                                 <div class="space-sm"></div>
@@ -404,7 +404,7 @@
                                     <p class="mb-0">
                                         The videos are FANTASTIC!  It was really interesting to see to see how they moved about the site to find the information they needed. Love your product!
                                     </p>
-                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon rounded-circle">
+                                    <img src="./assets/images/icons/quote-icon.png" alt="Quote image" class="img-fluid quote-icon">
                                 </div>
                                 <!-- Empty Space -->
                                 <div class="space-sm"></div>
