--- a/newhomepage/pricing.html
+++ b/newhomepage/pricing.html
@@ -130,7 +130,8 @@
                                                 </ul>
                                             </div>
                                             <div class="single-pricing-btn mt-auto">
-                                                <a href="#" class="btn btn-md btn-orange text-uppercase">Start Now</a>
+                                                <a href="#" class="btn btn-md btn-orange text-uppercase">
+                                                Buy Now</a>
                                             </div>
                                         </div>
                                         <!--/ End Single Pricing Table -->
@@ -147,11 +148,11 @@
                                             <div class="single-pricing-features">
                                                 <ul class="plan-features">
                                                     <li class="plan-feature">4 Six-Minute Videos</li>
-                                                    <li class="plan-feature">Shareable Summary</li>
+                                                    <li class="plan-feature">Video Transcription</li>
                                                 </ul>
                                             </div>
                                             <div class="single-pricing-btn mt-auto">
-                                                <a href="#" class="btn btn-md btn-orange text-uppercase">Start Now</a>
+                                                <a href="#" class="btn btn-md btn-orange text-uppercase">Buy Now</a>
                                             </div>
                                         </div>
                                         <!--/ End Single Pricing Table -->
@@ -176,12 +177,13 @@
                                                 </ul>
                                                 <ul class="plan-features">
                                                     <li class="plan-feature">6 Eight-Minute Videos Sent Monthly</li>
-                                                    <li class="plan-feature">Shareable Summary</li>
+                                                    <li class="plan-feature">Customize Test Schedule & Details Anytime </li>
+                                                    <li class="plan-feature">Video Transcription</li>
                                                     <li class="plan-feature">Cancel Anytime</li>
                                                 </ul>
                                             </div>
                                             <div class="single-pricing-btn mt-auto">
-                                                <a href="#" class="btn btn-md btn-primary text-uppercase">Start Now</a>
+                                                <a href="#" class="btn btn-md btn-primary text-uppercase">Free Trial</a>
                                             </div>
                                             <div class="plan-note">Free Trial 😊</div>
                                         </div>
@@ -207,13 +209,13 @@
                                                 </ul>
                                                 <ul class="plan-features">
                                                     <li class="plan-feature">6 Eight-Minute Videos Sent Monthly</li>
-                                                    <li class="plan-feature">Shareable Summary</li>
-                                                    <li class="plan-feature">UX Expert Consultation</li>
+                                                    <li class="plan-feature">Customize Test Schedule & Details Anytime </li>
+                                                    <li class="plan-feature">Video Transcription</li>
                                                     <li class="plan-feature">Cancel Anytime</li>
                                                 </ul>
                                             </div>
                                             <div class="single-pricing-btn mt-auto">
-                                                <a href="#" class="btn btn-md btn-primary text-uppercase">Start Now</a>
+                                                <a href="#" class="btn btn-md btn-primary text-uppercase">Free Trial</a>
                                             </div>
                                             <div class="plan-note">Free Trial 😊</div>
                                         </div>
@@ -226,7 +228,7 @@
                                 <div class="row">
                                     <div class="col-lg-6 text-center mx-auto">
                                         <p>
-                                            We got your back. If you’re not fully satisfied, you’ll get a refund no problem 🤝
+                                            If you’re not fully satisfied, we'll provide a refund no problem 🤝 Need something more custom? <a href="mailto:userlookco@gmail.com">Contact us</a>💬
                                         </p>
                                     </div>
                                 </div>
@@ -241,34 +243,35 @@
         <section class="faq section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5 mx-auto">
+                    <div class="col-lg-6 mx-auto">
                         <h2 class="section-title h2 text-center">
                                 In case you were wondering 🧐
                             </h2>
                     </div>
-                    <div class="col-11 mx-auto">
+                    <div class="col-14 mx-auto">
                         <div class="row faq-inner">
                             <div class="col-10 col-lg-5">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
-                                    <h3 class="signle-faq__title">What if I’m not happy with my user testing video results?</h3>
-                                    <p class="single-faq__lead lead">Cras mattis consectetur purus sit amet fermentum. Curabitur blandit tempus porttitor.</p>
+                                    <h3 class="signle-faq__title">With the monthly plan, can I control when to start each test and modify it?</h3>
+                                    <p class="single-faq__lead lead">Yes! Monthly tests work similar to recurring calendar events. You’ll get a notification by email when a new test is automatically scheduled each month. You do nothing and  let it go live or change the test start date and other details. Many customers find this feature useful when wanting to sync with their development/product release cycles or iterating on learning criteria.</p>
+                                </div>
+                                <!--/ End Single FAQ -->
+                            </div>
+
+                            <div class="col-10 col-lg-5">
+                                <!-- Single FAQ -->
+                                <div class="single-faq">
+                                    <h3 class="signle-faq__title">Can I target users by age, gender and other criteria?</h3>
+                                    <p class="single-faq__lead lead">Age, gender and common occupation is easiest to target. You can think of user targeting like a 'user persona'  If your target user is ‘Netflix users under age 50’ that is a very doable persona. Hoswever it’s ‘Moms with babies under 2 weeks old' it may be difficult for us to find those users within our pool. We'll let you know asap if that is the case. Otherwise, contact us if you feel unsure :)</p>
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
                             <div class="col-10 col-lg-5">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
-                                    <h3 class="signle-faq__title">Do you offer longer usability testing videos?</h3>
-                                    <p class="single-faq__lead lead">Cras mattis consectetur purus sit amet fermentum. Curabitur blandit tempus porttitor.</p>
-                                </div>
-                                <!--/ End Single FAQ -->
-                            </div>
-                            <div class="col-10 col-lg-5">
-                                <!-- Single FAQ -->
-                                <div class="single-faq">
-                                    <h3 class="signle-faq__title">What’s the benefit for signing up for a monthly plan?</h3>
-                                    <p class="single-faq__lead lead">Cras mattis consectetur purus sit amet fermentum. Curabitur blandit tempus porttitor.</p>
+                                    <h3 class="signle-faq__title">Can I test prototype mockups, Testflight beta apps?</h3>
+                                    <p class="single-faq__lead lead">Yes and yes. Many of our customers test prototype links from tools such as Invision, Marvel and others. You can also do usability testing with your iOS Testflight app by entering in your public Testflight link recently made available by Apple Appstore Connect.</p>
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
@@ -276,31 +279,32 @@
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">Who are the users testing my mobile app or website?</h3>
-                                    <p class="single-faq__lead lead">Cras mattis consectetur purus sit amet fermentum. Curabitur blandit tempus porttitor.</p>
+                                    <p class="single-faq__lead lead">Our recruited users are everyday English speakers from US, Canada and Australia. We recruit them w/ our own marketing as well as source them from 3rd party services like amazon mechanical turk. We do our best train, qualify and vet all our user testers so that you get quality feedback.</p>
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
                             <div class="col-10 col-lg-5">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
-                                    <h3 class="signle-faq__title">Can I cancel my monthly service?</h3>
-                                    <p class="single-faq__lead lead">Cras mattis consectetur purus sit amet fermentum. Curabitur blandit tempus porttitor.</p>
+                                    <h3 class="signle-faq__title">What’s better about UserLook compared to other user feedback or user testing tools?</h3>
+                                    <p class="single-faq__lead lead">If you’ve ever looked at user survey results, analytics data or even session recordings—you have to make lots of guesses about what people really are thinking and doing. We’re also a tiny two-person team so we are much cheaper and simpler compared to other user and usability testing services. Take a look at some of our examples to get a better idea.</p>
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
-                            <div class="col-10 col-lg-5">
-                                <!-- Single FAQ -->
-                                <div class="single-faq">
-                                    <h3 class="signle-faq__title">What’s better about UserLook compared to other services?</h3>
-                                    <p class="single-faq__lead lead">Cras mattis consectetur purus sit amet fermentum. Curabitur blandit tempus porttitor.</p>
-                                </div>
-                                <!--/ End Single FAQ -->
-                            </div>
+
                             <div class="col-10 col-lg-5">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">How quickly can I get back video results?</h3>
-                                    <p class="single-faq__lead lead">Cras mattis consectetur purus sit amet fermentum. Curabitur blandit tempus porttitor.</p>
+                                    <p class="single-faq__lead lead">We’re constantly trying to get your results as fast as possible while maintaining high quality. That said, it varies based on your user target or persona. The more general your user persona, the quicker you'll get results. </p>
+                                </div>
+                                <!--/ End Single FAQ -->
+                            </div>
+                            <div class="col-10 col-lg-5">
+                                <!-- Single FAQ -->
+                                <div class="single-faq">
+                                    <h3 class="signle-faq__title">What if I’m not happy with my user testing video results?</h3>
+                                    <p class="single-faq__lead lead">If you are not happy with any UserLook video, simply contact us and we’ll replace it for you asap.</p>
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
