footer copy edit

--- a/newhomepage/index.html
+++ b/newhomepage/index.html
@@ -110,7 +110,7 @@
                         <div class="row align-items-center justify-content-center">
                             <div class="col-12 col-sm-10 col-md-8 col-lg-6 text-center">
                                 <h1 class="hero-title">
-                                    Discover Real User Needs Effortlessly
+                                    Discover Real User Insights Effortlessly
                                 </h1>
                                 <p class="hero-lead lead px-lg-4">
                                     Watch people use your mobile app/website while sharing their unbiased thoughts & opinions.
@@ -146,13 +146,13 @@
                                 <!-- Empty Space -->
                                 <div class="space-md d-none d-lg-block"></div>
                                 <!--/ End Empty Space -->
-                                <span class="text-secondary d-none d-lg-block text-uppercase video-card__text">See Example</span>
+                                <span class="text-secondary d-none d-lg-block text-uppercase video-card__text">Watch Demo</span>
                             </div>
                         </div>
                         <!--/ End Video Card -->
                         <div class="video-btn text-center">
                             <a href="#" class="btn btn-md btn-outline-secondary">
-                                        More Examples
+                                        See Examples
                                         <svg viewBox="0 0 21.855 14.528" class="icon">
                                             <g>
                                                 <path fill="none" stroke="#00c696" stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round" stroke-linecap="round" d="M0,1.182H18.6" transform="translate(0 5.377)"/>
@@ -184,7 +184,7 @@
                         <div class="space-md"></div>
                         <!--/ End Empty Space -->
                         <p class="section-lead lead">
-                            Understand and witness the WHY behind your metrics to improve conversions, usability, UX and retention.
+                            See, hear, and understand the WHY behind your metrics to improve conversions, usability, UX and retention.
                         </p>
                     </div>
                 </div>
