--- a/newhomepage/pricing.html
+++ b/newhomepage/pricing.html
@@ -143,7 +143,7 @@
                                                 <div class="plan-period">
                                                     <span>ONE-TIME</span> 4 Videos
                                                 </div>
-                                                <div class="plan-price">$59</div>
+                                                <div class="plan-price">$69</div>
                                             </div>
                                             <div class="single-pricing-features">
                                                 <ul class="plan-features">
@@ -165,7 +165,7 @@
                                                     <span>AUTO-DELIVERY</span> 6 Videos
                                                 </div>
                                                 <div class="plan-price pro-price">
-                                                    $69
+                                                    $79
                                                     <span>/mo</span>
                                                 </div>
                                             </div>
@@ -208,7 +208,7 @@
                                                     </li>
                                                 </ul>
                                                 <ul class="plan-features">
-                                                    <li class="plan-feature">6 Eight-Minute Videos Sent Monthly</li>
+                                                    <li class="plan-feature">8 Eight-Minute Videos Sent Monthly</li>
                                                     <li class="plan-feature">Customize Test Schedule & Details Anytime </li>
                                                     <li class="plan-feature">Video Transcription</li>
                                                     <li class="plan-feature">Cancel Anytime</li>
@@ -228,7 +228,7 @@
                                 <div class="row">
                                     <div class="col-lg-6 text-center mx-auto">
                                         <p>
-                                            If you’re not fully satisfied, we'll provide a refund no problem 🤝 Need something more custom? <a href="mailto:userlookco@gmail.com">Contact us</a>💬
+                                            If you’re not fully satisfied, we'll get your money back no problem 🤝 Need something more customized? <a href="mailto:userlookco@gmail.com">Contact us</a>💬
                                         </p>
                                     </div>
                                 </div>
@@ -248,9 +248,9 @@
                                 In case you were wondering 🧐
                             </h2>
                     </div>
-                    <div class="col-14 mx-auto">
+                    <div class="col-10 mx-auto">
                         <div class="row faq-inner">
-                            <div class="col-10 col-lg-5">
+                            <div class="col-10 col-lg-6">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">With the monthly plan, can I control when to start each test and modify it?</h3>
@@ -259,7 +259,7 @@
                                 <!--/ End Single FAQ -->
                             </div>
 
-                            <div class="col-10 col-lg-5">
+                            <div class="col-10 col-lg-6">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">Can I target users by age, gender and other criteria?</h3>
@@ -267,7 +267,7 @@
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
-                            <div class="col-10 col-lg-5">
+                            <div class="col-10 col-lg-6">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">Can I test prototype mockups, Testflight beta apps?</h3>
@@ -275,7 +275,7 @@
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
-                            <div class="col-10 col-lg-5">
+                            <div class="col-10 col-lg-6">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">Who are the users testing my mobile app or website?</h3>
@@ -283,7 +283,7 @@
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
-                            <div class="col-10 col-lg-5">
+                            <div class="col-10 col-lg-6">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">What’s better about UserLook compared to other user feedback or user testing tools?</h3>
@@ -292,7 +292,7 @@
                                 <!--/ End Single FAQ -->
                             </div>
 
-                            <div class="col-10 col-lg-5">
+                            <div class="col-10 col-lg-6">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">How quickly can I get back video results?</h3>
@@ -300,7 +300,7 @@
                                 </div>
                                 <!--/ End Single FAQ -->
                             </div>
-                            <div class="col-10 col-lg-5">
+                            <div class="col-10 col-lg-6">
                                 <!-- Single FAQ -->
                                 <div class="single-faq">
                                     <h3 class="signle-faq__title">What if I’m not happy with my user testing video results?</h3>
